--- a/index.html
+++ b/index.html
@@ -1,33 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <title>AFSV</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="main.css">
   <script src="app.js"></script>
   <script src="https://d3js.org/d3.v4.min.js"></script>
-  <title>D3</title>
 </head>
 
 <body>
-  <div class="row">
-    <div class="model1">
-      <p class="title">Model 1</p>
-      <div class="overlay"></div>
-      <div class="ghost-button"><a href="#"> See Model 1</a></div>
+
+  <!--Header-->
+  <div class="center">
+    <div class="header">
+      <h1>Aviation Flight Schedule Visualization</h1>
     </div>
-    <div class="model2">
-        <p class="title">Model 2</p>
+  </div>
+
+    <div class="row">
+      <div class="model1">
+        <p class="title">Descriptive</p>
         <div class="overlay"></div>
-        <div class="ghost-button"><a href="#"> See Model 2</a></div>
-    </div>
-    <div class="model3">
-        <p class="title">Model 3</p>
-        <div class="overlay"></div>
-        <div class="ghost-button"><a href="#"> See Model 3</a></div>
+        <div class="ghost-button"><a href="#">See Descriptive Model</a></div>
+      </div>
+      <div class="model2">
+          <p class="title">Predicitve</p>
+          <div class="overlay"></div>
+          <div class="ghost-button"><a href="#">See Predictive Model</a></div>
+      </div>
+      <div class="model3">
+          <p class="title">Prescriptive</p>
+          <div class="overlay"></div>
+          <div class="ghost-button"><a href="#">See Prescriptive Model</a></div>
+      </div>
     </div>
 
-  </div>
 </body>
 </html>
