--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="model1">
         <p class="title">Descriptive</p>
         <div class="overlay"></div>
-        <div class="ghost-button"><a href="#">See Descriptive Model</a></div>
+        <div class="ghost-button" onclick="openModel1()"><a href="#">See Descriptive Model</a></div>
       </div>
       <div class="model2">
           <p class="title">Predicitve</p>
