more button actions

--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
       <div class="model2">
           <p class="title">Predicitve</p>
           <div class="overlay"></div>
-          <div class="ghost-button"><a href="#">See Predictive Model</a></div>
+          <div class="ghost-button" onclick="openModel2()"><a href="#">See Predictive Model</a></div>
       </div>
       <div class="model3">
           <p class="title">Prescriptive</p>
           <div class="overlay"></div>
-          <div class="ghost-button"><a href="#">See Prescriptive Model</a></div>
+          <div class="ghost-button" onclick="openModel3()"><a href="#">See Prescriptive Model</a></div>
       </div>
     </div>
 
