--- a/index.html
+++ b/index.html
@@ -19,20 +19,14 @@
   </div>
 
     <div class="row">
-      <div class="model1">
-        <p class="title">Descriptive</p>
-        <div class="overlay"></div>
-        <div class="ghost-button" onclick="openModel1()"><a href="#">See Descriptive Model</a></div>
-      </div>
-      <div class="model2">
-          <p class="title">Predicitve</p>
-          <div class="overlay"></div>
-          <div class="ghost-button" onclick="openModel2()"><a href="#">See Predictive Model</a></div>
-      </div>
-      <div class="model3">
-          <p class="title">Prescriptive</p>
-          <div class="overlay"></div>
-          <div class="ghost-button" onclick="openModel3()"><a href="#">See Prescriptive Model</a></div>
+      <div class="descriptive">
+        <p class="title">Descriptive Models</p>
+        <div class="globe_visual">
+          <div class="overlay">
+            <div class="text">Globe Visualization</div>
+            <div class="ghost-button"><a href="Globe_Visual.html">See Globe Visual</a></div>
+          </div>
+        </div>
       </div>
     </div>
 
