--- a/SpinningGlobe.html
+++ b/SpinningGlobe.html
@@ -56,6 +56,7 @@ circle {
 <script src="https://d3js.org/d3.v4.min.js"></script>
 <script src="https://d3js.org/queue.v1.min.js"></script>
 <script src="https://d3js.org/topojson.v0.min.js"></script>
+<script src="Scripts.js"></script>
 <script src="versor.js"></script>
 
 <script>
